test: stabilize email failure classifier tests